# minimiao

./: CLAUDE.md  LICENSE  README.md  controller.py  cooldown_dialogue.py  custom_widgets.py  device.py  event_bus.py  executor.py  gui.py  main.py  pyproject.toml  run_threads.py  viewer.py
devices/: alpao_dm.py  andor_emccd.py  andor_ixon.py  cam_sim.py  cobolt_laser.py  deformable_mirror.py  device.py  fdd_slm.py  flir_cmos.py  hamamatsu_orchflash.py  mcl_maddeck.py  mock_cam.py  ni_daq.py  thorlab_scmos.py  tis_cmos.py
gui/: ao_panel.py  controller_panel.py  custom_widgets.py  gl_viewer.py  main_window.py  napari_tool.py  viewer_window.py
processors/: foclok_processor.py  processor.py  shwfs_processer.py  trigger_generator.py
src/minimiao/: __init__.py  __main__.py  executor.py  logger.py  main.py  run_threads.py
src/minimiao/computations/: computator.py  dynamic_controller.py  focus_lock_control.py  image_processor.py  image_reconstructions.py  pattern_generator.py  shwfs_reconstruction.py  trigger_generator.py
src/minimiao/devices/: alpao_dm.py  andor_emccd.py  cobolt_laser.py  device.py  fdd_slm.py  flir_cmos.py  hamamatsu_scmos.py  hamamatsu_slm.py  mcl_deck.py  mcl_piezo.py  mock_cam.py  ni_daq.py  phaseform_dpp.py  thorlab_scmos.py  thorlab_webcam.py  tis_cmos.py
src/minimiao/gui/: ao_panel.py  controller_panel.py  cooldown_dialogue.py  custom_widgets.py  gl_viewer.py  main_window.py  viewer_window.py
src/minimiao/processors/: processor.py  shwfs_processer.py
src/minimiao/utilities/: image_processor.py  (+1 more)
utilities/: image_processor.py
